<resources>
    <string name="app_name">CustomSoundboard</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="choose_from_local_storage">Choose from local storage</string>
    <string name="choose_from_service">Choose from the service</string>
    <string name="title_activity_soundboard">SoundboardActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="custom_soundboard">Custom Soundboard</string>
    <string name="cant_find_sound">I can\'t find this sound, try adding it again.</string>
</resources>
