<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.kormelink.josse.customsoundboard.activities.LoginActivity"
    android:background="@color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/login_padding_left_right"
        android:paddingLeft="@dimen/login_padding_left_right"
        android:paddingRight="@dimen/login_padding_left_right">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/custom_soundboard"
            android:background="@color/red"
            android:padding="24dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginBottom="@dimen/mondrian_margin"/>

        <LinearLayout
            android:id="@+id/login_form"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mondrian_margin"
            android:layout_marginBottom="@dimen/mondrian_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="24dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/sign_in_buttons"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="24dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/sign_in"/>

                <TextView android:id="@+id/link_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account_yet_create_one"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:paddingTop="8dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/identity_provider_buttons"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mondrian_margin"
            android:layout_marginBottom="@dimen/mondrian_margin"
            android:background="@color/ligth_grey"
            android:padding="24dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:layout_marginTop="@dimen/mondrian_margin"
            android:layout_marginBottom="@dimen/mondrian_margin"
            android:paddingBottom="200dp">

        </LinearLayout>

    </LinearLayout>

</ScrollView>
